--- a/partial/_footer.html.slim
+++ b/partial/_footer.html.slim
@@ -9,10 +9,10 @@
         .site-logo.site-logo_melody
         .site-meta.site-title 台灣美樂地
         .site-meta.site-subtitle melody.iing.tw
-      .site.site_coming-soon
-        .site-logo
-        .site-meta.site-title 敬請期待
-        .site-meta.site-subtitle Coming soon
+      a.site href="http://light.iing.tw"
+        .site-logo.site-logo_hope
+        .site-meta.site-title 在地希望線上博覽會
+        .site-meta.site-subtitle light.iing.tw
   .footer-logo
 
   .copy &copy; 2016 蔡英文競選辦公室
