--- a/partial/_header.html.slim
+++ b/partial/_header.html.slim
@@ -1,2 +1,22 @@
 .header
   .container
+    .logo: a href="/" 點亮台灣 Light UP TAIWAN
+    .menu
+      ul.primary-nav
+        li: a href="#" 參選宣言
+        li: a href="#" 小英的故事
+        li: a href="#" 願景
+        li: a href="#" 加入志工
+        li: a href="#" 捐款
+      .secondary-nav
+        a.media-area href="#" 媒體專區
+        .search
+          .search-icon search
+          input.search-input
+        ul.social-nav
+          li: a.facebook href="#" facebook
+          li: a.line href="#" line
+          li: a.instagra href="#" instagram
+          li: a.youtub href="#" youtube
+
+    button.menu-btn Menu
