--- a/sass/all.scss
+++ b/sass/all.scss
@@ -18,6 +18,7 @@
 
 // ==== partial ====
 // @import "partial/guideline-header"; // guideline 專用
+@import "partial/header";
 @import "partial/site-info";
 @import "partial/footer";
 @import "partial/scale-content";
