add hero & post-list content

--- a/sass/all.scss
+++ b/sass/all.scss
@@ -17,7 +17,8 @@
 @import "component/block";
 
 // ==== partial ====
-// @import "partial/guideline-header"; // guideline 專用
+@import "partial/hero";
+@import "partial/post-list";
 @import "partial/site-info";
 @import "partial/footer";
 @import "partial/scale-content";
