--- a/sass/partial/_header.scss
+++ b/sass/partial/_header.scss
@@ -1,42 +1,306 @@
 .header {
-  position: relative;
+  @include pie-clearfix;
   background-color: white;
+  .container {
+    padding: 0;
+  }
 
   .logo {
     float: left;
-    padding: 8px 0;
+    padding: 6px 24px 6px;
     a {
       display: block;
       @include replace-text-with-svg(logo);
     }
   }
-
-  .menu {
-    position: absolute;
-    top: 60px;
-    left: 0;
-    right: 0;
-    background-color: white;
-    padding: 0 24px;
-    z-index: 200;
+  .menu-btn {
+    position: relative;
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
+    z-index: 250;
+    color: #50B584;
+    width: 72px;
+    height: 60px;
+    padding: 28px 24px;
+    @include box-sizing(border-box);
+    float: right;
+    &:focus {
+      outline: none;
+    }
+  }
+  .menu-btn-line {
+    position: relative;
+    width: 100%;
+    height: 3px;
+    background-color: #50B584;
+    @include transition(background-color 0.25s);
+    &:before, &:after {
+      content: '';
+      position: absolute;
+      left: 0;
+      width: 100%;
+      height: 3px;
+      background-color: #50B584;
+      @include transition(background-color 0.5s, transform .5s);
+    }
+    &:before{
+      top: -8px;
+    }
+    &:after {
+      bottom: -8px;
+    }
+  }
+  .is-open-menu .menu-btn-line {
+    background-color: transparent;
+    &:before, &:after {
+      top: 50%;
+      left: 50%;
+      margin: -1.5px 0 0 -50%;
+      background-color: white;
+    }
+    &:before {
+      @include transform( rotate(45deg) );
+    }
+    &:after {
+      @include transform( rotate(-45deg) );
+    }
   }
 
-  .menu-btn {
-    border: 1px solid #999;
-    background-color: transparent;
+  .menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    @include box-sizing(border-box);
+    z-index: 200;
+    visibility:hidden;
+    opacity:0;
+    @include transition(visibility 0s 0.5s, opacity 0.5s);
+    overflow: auto;
+    text-align: center;
+    background-color: #225253;
+    @include adjust-font-size-to(15px);
+    &.is-mobile {
+      display: none;
+    }
+  }
+  .menu-inner {
+    @include box-sizing(border-box);
+    padding: 24px 24px 0;
+    height: 100%;
+    overflow: auto;
+  }
+  .menu-logo {
+    display: block;
+    width: 72px;
+    height: 72px;
+    background-image: url('/images/menu-logo.png');
+    background-image: none, url('/images/menu-logo.svg');
+    background-position: center center;
+    @include background-size(contain);
+    @include opacity(0.3);
+    margin: 0 auto rhythm(1);
   }
 
   .primary-nav {
     @include reset-list-style;
+    @include trailer(2);
+    li {
+      position: relative;
+      &:before {
+        content: '';
+        display: block;
+        width: 24px;
+        height: 1px;
+        background-color: rgba(white, 0.25);
+        margin: 12px auto;
+      }
+    }
+    a {
+      display: block;
+      color: white;
+      &:hover {
+        text-decoration: none;
+      }
+    }
+  }
+
+  .menu-bottom {
+    border-top: 1px solid rgba(white, 0.2);
+  }
+
+  .media-collection {
+    display: block;
+    margin: rhythm(1) 0 rhythm(0.75);
+    color: #ccc;
+    &:hover {
+      text-decoration: none;
+    }
+  }
+  .search {
+    @include trailer(1);
+  }
+  .search-icon {
+    display: none;
+  }
+  .search-input {
+    border: none;
+    background-color: rgba(white, 0.25);
+    @include border-radius(20px);
+    padding: 3px 6px;
+    text-align: center;
+    color: white;
+    @include adjust-font-size-to(13px);
+    @include input-placeholder-color(white);
+    &:focus {
+      outline: none;
+    }
   }
 
   .social-nav {
     @include reset-list-style;
+    padding: 12px 0;
+    border-top: 1px solid rgba(white, 0.2);
+    li {
+      display: inline-block;
+      margin: 0 12px;
+    }
+    a {
+      display: block;
+      color: white;
+      &:hover {
+        text-decoration: none;
+      }
+    }
   }
 
-  .menu-btn {
-    float: right;
+  @include at-breakpoint($pad) {
+    .menu {
+      @include adjust-font-size-to(18px);
+
+    }
+    .menu-inner {
+      max-width: 400px;
+      margin: 0 auto;
+      @include padding-leader(3);
+    }
+    .menu-logo {
+      @include trailer(3);
+      width: 132px;
+      height: 132px;
+    }
+    .primary-nav {
+      @include trailer(3);
+      li {
+        position: relative;
+        &:before {
+          content: '';
+          display: block;
+          width: 24px;
+          height: 1px;
+          background-color: rgba(white, 0.25);
+          margin: 24px auto;
+        }
+      }
+      a {
+        display: block;
+      }
+    }
+    .media-collection {
+      display: block;
+      margin: rhythm(1.5) 0 rhythm(1);
+      @include adjust-font-size-to(15px);
+    }
+    .search {
+      @include trailer(1.5);
+    }
+    .search-input {
+      border: none;
+      background-color: rgba(white, 0.25);
+      @include border-radius(24px);
+      padding: 6px 12px;
+      @include adjust-font-size-to(15px);
+      width: 196px;
+    }
+    .social-nav {
+      padding: 24px 0;
+      li {
+        display: inline-block;
+        margin: 0 24px;
+      }
+    }
   }
 
+  @include at-breakpoint($desktop) {
+    .menu-btn {
+      display: none;
+    }
+    .menu {
+      display: block;
+      position: absolute;
+      bottom: auto;
+      visibility: visible;
+      @include opacity(1);
+      background-color: transparent;
+      @include transition(none);
+    }
+    .menu-inner {
+      height: auto;
+      overflow: visible;
+      max-width: none;
+      padding: 0;
+    }
+    .menu-logo {
+      display: none;
+    }
+    .primary-nav {
+      @include pie-clearfix;
+      display: inline-block;
+      @include trailer(0);
+      padding-top: 18px;
+      li {
+        float: left;
+        &:before {
+          display: none;
+        }
+      }
+      a {
+        @include adjust-font-size-to(16px);
+        color: #444;
+        margin: 0 12px;
+      }
+    }
+  }
 
+}
+
+// open menu
+.is-open-menu {
+  height: 100%;
+  body, .page-outer {
+    height: 100%;
+  }
+  .page-outer {
+    overflow: hidden;
+  }
+  .header {
+    .menu {
+      visibility:visible;
+      opacity:1;
+      transition-delay:0s;
+      display: block !important;
+    }
+  }
+
+  @include at-breakpoint($desktop) {
+    height: auto;
+    body, .page-outer {
+      height: auto;
+    }
+    .page-outer {
+      overflow: visible;
+    }
+  }
 }
