--- a/index.html.slim
+++ b/index.html.slim
@@ -1,3 +1,4 @@
 = render '/partial/hero'
-= render "/partial/header"
+= render '/partial/header'
+= render '/partial/sub-menu'
 = render '/partial/post-list'
