--- a/sass/all.scss
+++ b/sass/all.scss
@@ -19,6 +19,7 @@
 // ==== partial ====
 // @import "partial/guideline-header"; // guideline 專用
 @import "partial/header";
+@import "partial/sub-menu";
 @import "partial/hero";
 @import "partial/post-list";
 @import "partial/site-info";
