--- a/sass/partial/_hero.scss
+++ b/sass/partial/_hero.scss
@@ -8,6 +8,7 @@
       @include box-sizing(border-box);
       width: 100%;
     }
+    &>.hero-block-wrap { padding-bottom: 0; }
   }
   .hero-wrap-inner {
     @include pie-clearfix;
