--- a/sass/partial/_header.scss
+++ b/sass/partial/_header.scss
@@ -5,7 +5,7 @@
   top: 0;
   left: 0;
   right: 0;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid #50B584;
 
   .header-inner {
     max-width: 1512px;
