--- a/partial/_header.html.slim
+++ b/partial/_header.html.slim
@@ -14,7 +14,7 @@
           li: a href="#" 捐款
         .menu-bottom
           a.media-collection href="#" 媒體專區
-          .search
+          form.search
             label.search-icon.icon-search
             input.search-input placeholder="搜尋"
           ul.social-nav
